Fixing CRUD Product and Category